NextAuth added and Authorizetion api is setted.

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-BACKEND_URL = http://localhost:61850/api/
+
+
+NEXTAUTH_SECRET=lsdkmlskdmflksdkskmsdnkj
+NEXTAUTH_URL=http://localhost:3000
+
+
+
+
+
+
